<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/photo_background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_enter"
        android:textSize="36sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="36sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_hint_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="60dp"
        android:textAlignment="center"
        android:text="@string/hint"
        android:textColor="@color/white"
        android:textSize="@dimen/size_text"
        app:layout_constraintStart_toStartOf="@id/tv_welcome"
        app:layout_constraintTop_toBottomOf="@id/tv_welcome" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/gmail"
        android:textColorHint="@color/grey"
        app:hintTextColor="@color/black"
        app:boxCornerRadiusTopStart="@dimen/corner_radius"
        app:boxCornerRadiusTopEnd="@dimen/corner_radius"
        app:boxCornerRadiusBottomEnd="@dimen/corner_radius"
        app:boxCornerRadiusBottomStart="@dimen/corner_radius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_hint_input">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:textColor="@color/black"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/password"
        android:textColorHint="@color/grey"
        app:hintTextColor="@color/black"
        app:boxCornerRadiusTopStart="@dimen/corner_radius"
        app:boxCornerRadiusTopEnd="@dimen/corner_radius"
        app:boxCornerRadiusBottomEnd="@dimen/corner_radius"
        app:boxCornerRadiusBottomStart="@dimen/corner_radius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_layout"
        android:inputType="textPassword"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:textColor="@color/black"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_enter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/grey"
        android:minHeight="56dp"
        android:text="@string/enter"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:cornerRadius="24dp"
        app:iconGravity="end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_layout" />

    <TextView
        android:id="@+id/tv_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_pass"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@id/btn_enter"
        app:layout_constraintTop_toBottomOf="@id/btn_enter"
        android:paddingHorizontal="64dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>